fix: adapt Final story and wrap plain text in center tag

--- a/frontend/src/components/Final/Final.scss
+++ b/frontend/src/components/Final/Final.scss
@@ -80,7 +80,6 @@
         width: 100%;
         max-width: 360px;
         margin: 1rem auto;
-        text-align: center;
 
         table {
             width: 100%;
